# vulkan_learn

./: .gitignore  CMakeLists.txt  Readme.txt  mingw版本区别.md
include/: EasyVKStart.h  GlfwGeneral.hpp
scripts/: build.bat  build_clang.bat  build_vs2019.bat  clean.bat  run.bat  settings.cmake  shader_compile.bat
src/: glad.c  main.cpp  my_compiler.h  test.cpp
src/easyvk/: GlfwGeneral.hpp  VKBase+.h  VKBase.h
src/middlewares/glad/: glad.h
